
Bugs fixed
----------
- Bug 2007 - uan: Remove deprecation on SetRxThresholdDb
- Bug 2214 - tcp: Use of ScheduleNow only in selected part of the code
- Bug 2221 - network: Remove constraint on size of ns3::Packet Tag objects
- Bug 2248 - tcp: TCP SACK added after reviews
- Bug 2256 - tcp: bytes in flight now updated in TcpTxBuffer
- Bug 2263 - Support processing of multiple TCP options
- Bug 2450 - LogDistancePropagationLossModel is not continuous
- Bug 2463 - create trace source to trace the TXOP time that is actually used
- Bug 2471 - unable to disable Block Ack agreement for 802.11n 
- Bug 2477 - DCF manager assert
- Bug 2485 - Check for queue full should happen before checking RED thresholds
- Bug 2491 - replace DcfManager::MY_DEBUG
- Bug 2492 - uan: Make use of RxGain attribute in UanPhyGen class
- Bug 2511 - HT Greenfield is not working
- Bug 2512 - Byte mode not configured correctly in red-queue-disc-test-suite.cc
- Bug 2513 - ParetoRandomVariable needs a "scale", not a "mean" attribute.
- Bug 2518 - Suppress printing of list of modules for Python programs
- Bug 2521 - Include ipv6-option.h in wscript
- Bug 2527 - PrintRoutingTable extended to add an optional Time::Units parameter
- Bug 2528 - 802.11n RIFS cannot be enabled
- Bug 2529 - Missing trace when Block ACK timeout is triggered or when missing MPDUs are announced by a Block ACK response
- Bug 2530 - Rename aodv::SetBalckListTimeout to aodv::SetBlackListTimeout
- Bug 2532 - Inconsistencies between 802.11n MCS and NSS value reported in TXVECTOR
- Bug 2533 - Provide a better 802.11n/ac PHY abstraction model for SIMO, MISO and MIMO
- Bug 2535 - memory leak in bench-simulator.cc
- Bug 2536 - fixed dead assignment and potential memory leak in wimax
- Bug 2537 - Dead assigment on CoDel::DoDequeue
- Bug 2538 - fixed dead assignment on tap-bridge
- Bug 2540 - fixed dead assignment on mesh/ie-dot11s-perr
- Bug 2541 - preamble not assigned correctly
- Bug 2542 - dead assignment on wifi mac-low